Fix footer height and adjust spacing

--- a/css/footer.css
+++ b/css/footer.css
@@ -1,3 +1,26 @@
 .footer-container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    font-size: 20px;
+}
 
+.footer-container * {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0 5px;
+
+}
+
+.copyright {
+    border-right: 2px solid black;
+    padding-right: 10px;
+    height: 22px
+}
+
+.github {
+    height: 24px
 }
