--- a/styles.css
+++ b/styles.css
@@ -5,8 +5,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Baskervville&family=IM+Fell+English+SC&family=Rye&display=swap');
 
 * { 
-    outline: 1px solid red;
-  }
+/*     outline: 1px solid red;
+ */  }
 
 body {
     font-family: 'IM Fell English SC', serif;
@@ -14,7 +14,7 @@ body {
 
 .container {
     display: grid;
-    grid-template: 50px 10fr 25px / 1fr;
+    grid-template: 50px 10fr 40px / 1fr;
     height: 100vh;
     width: auto;
 }
